[ANZACATT-66] Avoid image stretching on images.

--- a/docroot/sites/default/themes/custom/anzacatt/src/sass/page/_layout.scss
+++ b/docroot/sites/default/themes/custom/anzacatt/src/sass/page/_layout.scss
@@ -209,6 +209,10 @@ ul, ol, dl, p, dt, dd {
   @include wysiwyg;
 }
 
+img {
+  height: auto;
+}
+
 a[rel~='external']::after {
   background-image: ui-kit-icon("external-link--aqua.svg") !important;
 }
